complete logistic admin and customer view we can say it a MVP

--- a/dhaara/package.json
+++ b/dhaara/package.json
@@ -19,13 +19,16 @@
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.86.0",
     "@tailwindcss/postcss": "^4.1.17",
+    "@types/leaflet": "^1.9.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.312.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.67.0",
+    "react-leaflet": "^5.0.0",
     "tailwind-merge": "^2.6.0",
     "zod": "^3.25.76"
   },
