--- a/dhaara_app/pubspec.yaml
+++ b/dhaara_app/pubspec.yaml
@@ -29,9 +29,16 @@ dependencies:
   # Utilities
   intl: ^0.18.1
   url_launcher: ^6.2.2
+  http: ^1.2.0
 
   # Toast/Snackbar
   fluttertoast: ^8.2.4
+
+  # Maps (Leaflet-based)
+  flutter_map: ^6.1.0
+  latlong2: ^0.9.0
+  geolocator: ^11.0.0
+  geocoding: ^3.0.0
 
 dev_dependencies:
   flutter_test:
